<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home"
    android:orientation="vertical" >

    <ImageButton
        android:id="@+id/img_record_effect"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/anm_sound_1"
        android:contentDescription="@string/app_name" />

    <ImageButton
        android:id="@+id/img_record_speaker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/songid_mic_results"
        android:contentDescription="@string/app_name" />

    <Button
        android:id="@+id/btn_myrecord_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_record_speaker"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/view_my_record"
        android:textColor="#ffffff" />

    <com.google.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
        android:id="@+id/main_adView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/adunit_id"
        android:keepScreenOn="true" />

</RelativeLayout>